--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -5,6 +5,7 @@
 /* mixins, variables, etc. */
 
 $gray-medium-light: #eaeaea;
+$spacer: 1rem !default;
 
 @mixin box_sizing {
   -moz-box-sizing:    border-box;
@@ -125,6 +126,48 @@ table {
   height: 30px;
 }
 
+// Bootstrap spacers
+.mt-0 {
+  margin-top: 0 !important;
+}
+
+.ml-1 {
+  margin-left: ($spacer * .25) !important;
+}
+
+.ml-2 {
+  margin-left: ($spacer * .5) !important;
+}
+
+.px-2 {
+  padding-left: ($spacer * .5) !important;
+  padding-right: ($spacer * .5) !important;
+}
+
+.pt-3 {
+  padding-top: $spacer !important;
+}
+
+.pt-4 {
+  padding-top: ($spacer * 1.5) !important;
+}
+
+.pt-5 {
+  padding-top: ($spacer * 3) !important;
+}
+
+.p-3 {
+  padding: $spacer !important;
+}
+
+.p-4 {
+  padding: ($spacer * 1.5) !important;
+}
+
+.p-5 {
+  padding: ($spacer * 3) !important;
+}
+
 section {
   overflow: auto;
 }
@@ -183,6 +226,7 @@ td.hlight {
 #logo {
 //  float: left;
   margin-right: 10px;
+  margin-left: 10px;
   font-size: 20px;
   color: #34d5eb;
   text-transform: uppercase;
