--- a/app/views/static_pages/_desktop_rmm_home.html.erb
+++ b/app/views/static_pages/_desktop_rmm_home.html.erb
@@ -18,8 +18,8 @@
 
 <div style="padding:20px;">
 <font size=3>
- <p> Did you know? You can now renew your medications over the phone. </p>
- <p> Simply register with your OHIP card, confirm your email and login. Request callback from doctor, discuss your needs and then just go to pharmacy near you to pick up your prescription. Simple as that! </p>
+  <p><font size=6>D</font>id you know? You can now renew your medications over the phone - free of charge. </p>
+  <p>Simply register with your OHIP card, and log in to request callback from doctor. Discuss your needs and then just go to pharmacy near you to pick up your prescription. Simple as that! </p>
 
 <div class='spacer-20'></div>
 <div class='spacer-20'></div>
