--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -8,14 +8,14 @@
   <p> Simply register with your OHIP card, confirm your email and login to make your first telephone appointment. Once registered, you will have access to your patient record and visit history. Our clinic served over 65000 patients over the last 15 years. </p>
 
 <div align="center"> <%# link_to 'Yes! I want to talk to a doctor', new_user_registration_path, class: "btn btn-primary btn-lg" %> </div>
-<div class='spacer-10'></div>
 
-<div align="center"><%= link_to 'Request Callback From Dr. Ostapenko', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
+<div align="center" class="pt-4"><%= link_to 'Request Callback From Dr. Ostapenko', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
 
-<div class='spacer-20'></div>
-<p>Don’t have a health card? We still can help. Please call the number below and leave a message. We will respond as soon as we can. </p>
+<p class="pt-4"><b><i>We never send surprize bills for insured services! Free is free. </i></b> 
+<p class="pt-3">Don’t have a health card? We still can help. Please call the number below and leave a message. We will respond as soon as we can. </p>
 
 <h1> (289) 204-0561 </h1>
 
-<div class='spacer-20'></div>
+<div class='pt-5'>
 <%= render "footer_icons" %>
+</div>
