--- a/app/views/static_pages/_mobile_rmm_home.html.erb
+++ b/app/views/static_pages/_mobile_rmm_home.html.erb
@@ -19,8 +19,8 @@
 
 <div class="row" style="padding:10px">
   <div class="col-xs-12">
-    <p><font size=6>D</font>id you know? You can now renew your medications over the phone. </p>
-    <p><font size=6>S</font>imply register with your OHIP card, confirm your email and login. Request callback from doctor, discuss your needs and then just go to pharmacy near you to pick up your prescription. Simple as that! </p>
+    <p><font size=6>D</font>id you know? You can now renew your medications over the phone - free of charge. </p>
+    <p>Simply register with your OHIP card, log in and request callback from doctor. Discuss your needs and then just go to pharmacy near you to pick up your prescription. Simple as that! </p>
 
 <div align="center" class="p-3"><%= link_to 'Yes! I want to renew my prescription now', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
 
