--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -11,7 +11,7 @@
 
 <div align="center" class="pt-4"><%= link_to 'Request Callback From Dr. Ostapenko', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
 
-<p class="pt-4"><b><i>We never send surprize bills for insured services! Free is free. </i></b> 
+<p class="pt-4"><b><i>We never send surprise bills for insured services! Free is free. </i></b> 
 <p class="pt-3">Don’t have a health card? We still can help. Please call the number below and leave a message. We will respond as soon as we can. </p>
 
 <h1> (289) 204-0561 </h1>
