--- a/app/views/patients/_patient_form.html.erb
+++ b/app/views/patients/_patient_form.html.erb
@@ -12,29 +12,29 @@
   <!-- Row 1 -->
   
 <div class="row">
-  <div class="col-sm-3">
+  <div class="col-md-3 col-xs-12">
      <%= f.input :lname, hint: 'Required'%>
   </div>
 
-  <div class="col-sm-3">
+  <div class="col-md-3 col-xs-12">
   <%= f.input :fname %>
   </div>
 
-  <div class="col-sm-2">
+  <div class="col-md-2 col-xs-12">
   <%= f.input :sex, collection: SEXES, hint: 'Required', label: 'Gender', include_blank: false %>
   </div>
   
-  <div class="col-sm-3">
+  <div class="col-md-3 col-xs-4">
   <%= f.input :dob, as: :date, start_year: 1915, end_year: Date.today.year, hint: 'Required', html5: true %>
   </div>
 </div>  
   
 <div class="row">
-  <div class="col-sm-3" id="ifh_number", style="display:none;">
+  <div class="col-md-3" id="ifh_number", style="display:none;">
   <%= f.input :ifh_number, label:'IFH Number', hint: 'Required *' %>
   </div>
 
-  <div class="col-sm-3" id="ohip_number">
+  <div class="col-md-3" id="ohip_number">
   <%= f.input :ohip_num, label: 'Health Card Number', hint: 'Required ' %>
   </div>
 
@@ -42,25 +42,30 @@
      <%= f.input :ohip_ver, label: 'Version', hint: "2 letr" %>
   </div>
 
-  <div class="col-md-2 col-sm-2" id="hin_prov" >
-  <%= f.input :hin_prov, collection: PROVINCES, label: 'Card Province', include_blank: false %>
+  <div class="col-md-1" id="hin_prov" >
+  <%= f.input :hin_prov, collection: PROVINCES, label: 'Prov', include_blank: false %>
   </div>
   
-  <div class="col-md-3 col-sm-3" id="hin_expiry">
+  <div class="col-md-3" id="hin_expiry">
      <%= f.input :hin_expiry, start_year: Date.today.year, end_year: Date.today.year+5, html5: true, label: "Expires On", hint: 'Required' %>
   </div>
   
-  
+  <div class="col-md-3">
+  <%= f.input :family_dr, label: 'Family Doctor, if known', collection: Doctor.all, hint:'Optional', label_method: :lname, value_method: :lname, prompt: 'Select' %>
+  </div>
 </div>
   
+<%
+=begin %>
+
 <!-- Row 3 -->
 <div class="row">
 
-  <div class="col-sm-6">
+  <div class="col-md-6">
   <%= f.input :addr, label: 'Street Address' %>
   </div>
   
-  <div class="col-sm-3">
+  <div class="col-md-3">
   <%= f.input :city %>
   </div>
   
@@ -68,36 +73,34 @@
   <%= f.input :prov, collection: PROVINCES, include_blank: true %>
   </div>
   
-  <div class="col-sm-2">
+  <div class="col-md-2">
   <%= f.input :postal, label: 'Postal/ZIP' %>
   </div>
 </div>
 
+<%
+=end %>
+
 <!-- Row 4 -->
 
 <div class="row">
-  <div class="col-sm-2">
-  <%# f.input :family_dr, label: 'Family Doctor' #%>
-  <%= f.input :family_dr, label: 'Family Doctor', collection: Doctor.all, hint:'Optional', label_method: :lname, value_method: :lname, prompt: 'Select' %>
-  </div>
-  
-  <div class="col-sm-2">
+  <div class="col-md-2">
   <%= f.input :phone, as: :tel, label: 'Home Phone', value: num_to_phone(@patient.phone) %>
   </div>
   
-  <div class="col-sm-2">
+  <div class="col-md-2">
   <%= f.input :mobile, as: :tel, value: num_to_phone(@patient.mobile), hint: "Optional" %>
   </div>
   
-  <div class="col-sm-2">
+  <div class="col-md-3">
   <%= f.input :pharmacy, label:'Pharmacy name', hint: 'Optional' %>
   </div>
   
-  <div class="col-sm-2">
+  <div class="col-md-2">
   <%= f.input :pharm_phone, as: :tel, label: 'Pharm. Phone', value: num_to_phone(@patient.pharm_phone), hint: 'Optional' %>
   </div>
   
-  <div class="col-sm-2">
+  <div class="col-md-2">
   <%= f.input :pharm_fax, as: :tel, label: 'Pharm. Fax', value: num_to_phone(@patient.pharm_fax), hint: 'Optional' %>
   </div>
   
@@ -105,21 +108,21 @@
   
 <!-- Row 6 -->  
 <div class="row">
-  <div class="col-sm-12">
+  <div class="col-md-11">
   <%= f.input :allergies, label: 'Allergies, if any', hint: 'Optional'  %>
   </div>
 </div>
 
 <!-- Row 7 -->
-<div class="row">
-  <div class="col-sm-12">
+<div class="row" >
+  <div class="col-md-11">
   <%= f.input :meds, label: 'List of current medications', hint: 'Optional'  %>
   </div>
 </div>
 
 <div class="row">
-  <div class="col-md-12 col-xs-12">
-  <%= f.button :submit, 'Save Record', class: "btn btn-primary" %>
+  <div class="col-md-11 col-xs-12">
+  <%= f.button :submit, 'Save Record', class: "btn btn-lg btn-primary" %>
   </div>
 </div>
 
