--- a/app/views/visits/_patient_form.html.erb
+++ b/app/views/visits/_patient_form.html.erb
@@ -59,7 +59,7 @@
 <%= render "consent_form", f: f %>
 
 <% unless action_name == 'show' %>
-    <%= f.button :submit, yield(:button_text), class: "btn btn-primary btn-block" %>
+    <%= f.button :submit, yield(:button_text), class: "btn btn-primary btn-block btn-lg" %>
 <% end %>
 
 <small><i>Please make sure the phone number shown in the title is correct. Otherwise doctor won't be able to reach you</i></small>
