--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,24 +1,24 @@
 <% provide(:title, 'Patient Registration') %>
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
-  <%# f.full_error :patient_id %> <%#unless f.error :ohip_num %>
-  <%# display = f.object.errors[:email].present? ? 'display: all' : 'display: none' %>
-  <%# f.object.errors.inspect %>
-  
+<%= f.hidden_field :dob %>
+
 <div class="col-md-4 col-sm-4 col-md-offset-4 col-sm-offset-4">
 <h3>Patient Sign Up</h3>
 <div class="well">
 
+  <% if controller_name == 'my_registrations' %>
   <div id="note"> 
   Clinic patient? If health card number matches our records, we will retrieve your patient profile
   </div>
+  <% end %>
 
   <b><font color=green><span id="results"></span></font></b>
   <p>&nbsp;</p>
 
   <div class="row">
   <div class="col-md-12">
-    <%= f.input :ohip_num, label: 'Your Health Card Number', autofocus: true %>
+  <%= f.input :ohip_num, label: 'Your Health Card Number', autofocus: true %> 
   </div>
   </div>
 
@@ -47,7 +47,7 @@
 
   <div class="row" id="submit">
   <div class="col-md-12">
-    <%= f.button :submit, "Sign Up to make an appointment", class: "btn btn-primary btn-lg" %>
+    <%= f.button :submit, "Sign Up to Make an Appointment", class: "btn btn-primary btn-lg" %>
   </div>
   </div>
 
@@ -66,10 +66,16 @@
 $(document).ready(function() {
 
 var ohip_num = document.getElementById("user_ohip_num");
+var ohip_num_val = ohip_num.value.replace(/\D/g,'');
+var email = document.getElementById("user_email");
+  if (ohip_num.value) {
+     get_patient(ohip_num_val);
+     email.focus();
+  }
+
 $(ohip_num).change(function () {
   if ($(this).val()) {
      get_patient( $(this).val() );
-//     alert($(this).val());
   }
 });
 
@@ -82,7 +88,7 @@ $(ohip_num).change(function () {
     }).done(function (data) {
       if (data.lname !== undefined) {
 //        console.log(data);
-        result = `Clinic patient found:<br> ${data.lname}, ${data.fname} dob:  ${data.dob} Last visit: ${data.last_visit_date}`;
+        result = `Clinic patient found:<br> ${data.lname}, ${data.fname} born ${data.dob}<br> Last visit: ${data.last_visit_date}`;
         $("#results").append(result);
         $('#note').hide()
       }
