--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -1,25 +1,32 @@
 <% provide(:title, 'Welcome') %>
 
-<aside>
-<div id='homepic' class="p5">
-<img src='/images/clinic.jpg' width="480" style="padding:20px"></img>
-<div id="address">140 Centennial Pkwy N, Hamilton, ON L8E 1H9 (289) 204-0561 </div>
-</div>
-</aside>
+<div class="row pt-5">  
+  <div class="col-md-5">
+    <img src='/images/clinic.jpg' width="480" style="padding:20px"></img>
+    <div id="address">140 Centennial Pkwy N, Hamilton, ON L8E 1H9 (289) 204-0561 </div>
+  </div>
 
-<div class="hdr-text">Digital Walk-In Clinic for canadians <img src="/images/leaf.png" width=45 valign=top> </div> 
-
-<div class="p-5">
+<div class="col-md-7">
+  <div class="hdr-text">Digital Walk-In Clinic for canadians <img src="/images/leaf.png" width=45 valign=top> </div> 
+  <div class='pt-5'></div>
 <font size=3>
   <p><font size=6>N</font>eed to see a doctor, but don't want to go to clinic during pandemic? You don't have to. You can now discuss your medical issue and renew your medications over the phone.</p>
-  <p> Simply register with your OHIP card, confirm your email and login to make your first telephone appointment right away. Once registered, you will have access to your patient record and visit history. Our clinic served over 65000 patients over the last 15 years. </p>
-    
-<div align="center"> <%# link_to 'Yes! I want to talk to a doctor', new_user_registration_path, class: "btn btn-primary btn-lg" %> </div>
+
+  <p>
+  Let's first look you up. More than 65000 patients visited our clinic over the last 15 years, so chances are you are in our database. If found, you will have immediate access to your patient record and visit history </p>
+
+  <%= render "#{device_type}_lookup" %>
+
+<p> If you are registered already, you are ready to make your telephone appointment: </p>
 
 <div align="center" class="pt-4"><%= link_to 'Request Callback From Dr. Ostapenko', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
 
-<p class="pt-5"><b><i>We never send surprise bills for insured services! Free is free. </i></b> 
+<p class="pt-4"><i>We never send surprise bills for insured services! Free is free. </i> </p>
 
+</div>
+</div>
+<div class="row ml-3 mr-3">
+<div class="col-md-12">
 <p class="pt-5">Don’t have a health card? We still can help. Please call the number above and leave a message. We will respond as soon as we can. </p>
 
 <p>
@@ -27,82 +34,17 @@ Covid-19 is here and it’s not a regular flu. This virus is much more contagiou
 If you have any or all of these symptoms: fever, coughing, weakness, sweating, muscle pain, do not go to see a doctor, this is a sure way to spread the infection!  Please stay at home and call a doctor. You can register and make a telemedicine appointment with dr. Ostapenko using the button above.
 </p>
 
-
 <p>
 <b>Mask or no mask?</b> Surgical masks in general, but especially N95 (US) or FFP3 (Europe) help to prevent the spread of the disease. If you have Covid-19 symptoms, it’s recommended to wear a mask in public.
 </p>
 <p>
 <b>Think you might have it?</b> <a href="https://covid-19.ontario.ca/self-assessment/#q1" target="_new">Here is official Ontario quick self-assessment page</a>
 
-
 </font>
+</div>
+</div>
 
-<div class='pt-5'>
+<div class='p-3'>
 <%= render "footer_icons" %>
 </div>
 
-<!--
-<p>
-At this point self-isolation is the best way to keep you safe and prevent the spread of this virus. Please stay home as much as possible. If you do have to get out, respect social distancing rules, do not touch your face and wash your hands often. Here are some helpful videos.
-</p>
-</font>
-</div>
-
-<div class='spacer-20'></div>
-<b>
-<div class="row">
-  <div class="col-md-3 col-md-offset-2">
-<a href="https://oma.us12.list-manage.com/track/click?u=f3031ca7cb6af54104b9de2cd&id=61aeb9b491&e=b5dca5db64" target="_new">A video on #socialdistancing</a>
-  </div>
-  <div class="col-md-3">
-<a href="https://oma.us12.list-manage.com/track/click?u=f3031ca7cb6af54104b9de2cd&id=cc0e3b2071&e=b5dca5db64" target="_new">A quick video with five tips for COVID-19 </a>
-  </div>
-  <div class="col-md-3">
-<a href="https://oma.us12.list-manage.com/track/click?u=f3031ca7cb6af54104b9de2cd&id=440e19b368&e=b5dca5db64" target="_new">A video on how to wash your hands</a>
-  </div>
-</b>
-</div>
-
-<p class="medium">
-No appointment is necessary, we service both Ontario and out of province patients.
-New patients are welcome. Driver Medical Exam. We provide specialist referrals and speak many different languages.
-Pharmacy is available on the premises. Need a flushot? We provide flu shots and other injections without wait.  
-</p>
-
-<p class="medium">
-<h3>9am to 8pm, Mon-Fri, 9am to 2pm on weekends & holidays</h3>
-</p>
-
-<div class='spacer-10'></div>
-<p class="medium">
-We work together with the public Health Department and many specialists to satisfy the needs of our patients.
-Please arrive half an hour before closing time.  Schedules are subject to change without notice. 
-Table below provides most current schedule and is updated daily.
-</p>
-
-<div class='spacer-10'></div>
-
-<%# people_waiting = Visit.where(status: ARRIVED).count rescue 0 %>
-<p>
-
-
-<section id='marquee'>
-  <div class="container-fluid">
-    <marquee direction="left"><h4> <%# Schedule::doc_on_duty %> ... Flu shots and other injections are provided with no wait time </h4></marquee>
-  </div>
-</section>
-
-
-<div class="row">
-  <span style="width:420px; float:left; margin-left: 20px; ">
-  <%# render "schedules/full_schedule" %>
-  </span>
-  
-  <span style="width:250px; float:right; margin-top: 12px; margin-right: 20px;">
-  <div class="caption-text"><a href="https://medimap.ca/Stoney-Creek-Medical-Walk-In-Clinic" target="_new">Show current Wait Time</a></div> 
-  <img src='/images/map.png' width="240"></img>
-  </span>
-</div>
-<div class='spacer-10'></div>
-
--->
