--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -3,11 +3,14 @@
 <div class='spacer-10'></div>
 <img src='/images/mobile_clinic.jpg' width="320" style="padding:10px"></img>
 
-<div style="padding:10px;">
- <p> Need to see a doctor, but don't want to visit clinic during pandemic? You don't have to. You can now discuss your medical issue and renew your medications over the phone.</p>
-  <p> Simply register with your OHIP card, confirm your email and login to make your first telephone appointment. Once registered, you will have access to your patient record and visit history. Our clinic served over 65000 patients over the last 15 years. </p>
+  <p><font size=6>N</font>eed to see a doctor, but don't want to go to clinic during pandemic? You don't have to. You can now discuss your medical issue and renew your medications over the phone.</p>
 
-<div align="center"> <%# link_to 'Yes! I want to talk to a doctor', new_user_registration_path, class: "btn btn-primary btn-lg" %> </div>
+  <p>
+  Let's first look you up. More than 65000 patients visited our clinic over the last 15 years, so chances are you are in our database. If found, you will have immediate access to your patient record and visit history </p>
+
+  <%= render "#{device_type}_lookup" %>
+
+<p> If you are registered already, you can make your telephone appointment by clicking a button below: </p>
 
 <div align="center" class="pt-4"><%= link_to 'Request Callback From Dr. Ostapenko', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
 
