--- a/app/views/patients/_patient_show.html.erb
+++ b/app/views/patients/_patient_show.html.erb
@@ -56,7 +56,7 @@ Medications:
 
 <div class="spacer-20"></div>
 
-<%= render "#{current_user.role}_visits" %>
+<%= render "patient_#{device_type}_visits" %>
 
 </div>
 
