--- a/app/views/visits/_visit.html.erb
+++ b/app/views/visits/_visit.html.erb
@@ -1,1 +1,1 @@
-<%= render "visits/#{current_user.role}_visit", visit: visit %>
+<%= render "visits/#{current_user.role}_#{device_type}_visit", visit: visit %>
