--- a/app/views/layouts/_desktop_footer.html.erb
+++ b/app/views/layouts/_desktop_footer.html.erb
@@ -1,7 +1,7 @@
 <footer>
   <small>
     <!--img src="/images/small_logo.png" width="35"></img>-->
-    <img src="/favicon.ico" width="16x16"></img>
+    <img src="/favicon.ico" width="16x16" class='ml-3'></img>
     The <a href="<%= project_url %>">Walk-In EMR </a> -  &copy; <%= Date.today.year %> - All rights reserved
   </small>
   <nav>
