--- a/app/views/layouts/_mobile_date_select.html.erb
+++ b/app/views/layouts/_mobile_date_select.html.erb
@@ -1,13 +1,15 @@
+<div class='col-xs-4 col-xs-offset-7'>
 <% date = Date.parse(params[:date]) rescue Time.now %>
 <%= form_with  method: :get, skip_enforcing_utf8: :true  do |f| %>
     <div class="form-group">
-       <div class="col-sm-12 col-md-12 padding-0">
+       <div class="col-xs-12i padding-0 ">
           <%= f.date_field :date,
                             id: '_datepicker',
                             onChange: 'this.form.submit()',
                             value: date.strftime('%Y-%m-%d'),
-                            class: 'form-control',
-                            style:"width:165px;" %>
+                            class: 'form-control'
+           %>
        </div>
     </div>
 <% end %>
+</div>
