--- a/app/views/patients/_admin_mobile_visits.html.erb
+++ b/app/views/patients/_admin_mobile_visits.html.erb
@@ -2,16 +2,14 @@
 <div class="col-md-6">
     <h3>Visits: (<%= @patient.visits.count %>)</h3>
     <% if @patient.visits.any? %>
-        <table class="tbl">
+        <table class="table">
   	  <thead>
 	  <tr>
 	    <th>Date</th>
-	    <th class="tbl_md">Bil.Type</th>
-	    <th class="tbl_md">Edit</th>
-	    <th>Doctor</th>
-	    <th class="tbl_md">Diag.</th>
+	    <th class="tbl_md text-center">Type</th>
+	    <th class="tbl_md text-center">Diag.</th>
 	    <th>Services</th>
-	    <th class="tbl_md">Status</th>
+	    <th>Status</th>
 	  </tr>
 	  <tbody>
 
