--- a/app/views/patients/_staff_desktop_visits.html.erb
+++ b/app/views/patients/_staff_desktop_visits.html.erb
@@ -2,7 +2,7 @@
 <div class="col-md-6">
     <h3>Visits: (<%= @patient.visits.count %>)</h3>
     <% if @patient.visits.any? %>
-        <table class="tbl">
+        <table class="table table-condensed">
   	  <thead>
 	  <tr>
 	    <th>Date</th>
