--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -1,8 +1,8 @@
 <% provide(:title, 'Welcome') %>
 
-<div class="row pt-2">  
+<div class="row">  
   <div class="col-md-5">
-    <img src='/images/clinic.jpg' width="480" style="padding:20px"></img>
+    <img src='/images/clinic.jpg' width="480" style="padding: 20px"></img>
     <div id="address">140 Centennial Pkwy N, Hamilton, ON L8E 1H9 (289) 204-0561 </div>
   </div>
 
