--- a/app/views/visits/_admin_desktop_visit.html.erb
+++ b/app/views/visits/_admin_desktop_visit.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td><%= link_to visit.date, patient_visit_path(@patient,visit) %></td>
-  <td><%= visit.pat_type %></td>
-  <td>
+  <td class="text-center"><%= visit.pat_type %></td>
+  <td class="text-center">
   <% if visit.editable? || current_user.admin? %>
     <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_visit_path(@patient,visit), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window', onclick: "set_lg_modal()"  %>
   <% end %>
