changes in visit forms; Cash bill type bug fix

--- a/app/views/daysheet/_doctor_visit.html.erb
+++ b/app/views/daysheet/_doctor_visit.html.erb
@@ -1,4 +1,4 @@
-<% highlight = nil; highlight = 'table-warning' if visit.proc_code.present? && !visit.diag_code.present? 
+<% highlight = nil; highlight = 'table-warning' if visit.proc_code.present? && !visit.diag_code.present? && !visit.cash? 
    pat = visit.patient 
    desktop = device_is_desktop?
 %>
