--- a/app/views/visits/_doctor_form.html.erb
+++ b/app/views/visits/_doctor_form.html.erb
@@ -24,6 +24,11 @@
   end 
 %>
 
+  <%= f.hidden_field :bil_type  %>
+  <%= f.hidden_field :bil_type2  %>
+  <%= f.hidden_field :bil_type3  %>
+  <%= f.hidden_field :bil_type4  %>
+
 <div class="cyan-well">
   <!-- Row 0 if new visit --> 
 
@@ -48,7 +53,7 @@
 
   <div class="col-sm-2">
   <%= f.label "Service" %> <span class='form-text text-muted' id='svc'></span>
-  <%= f.input :proc_code, collection: @procedures, label_method: :code, value_method: :code, prompt: 'Select', label: false, include_blank: 'None', hint: 'Required', selected: 'K081A' %> 
+  <%= f.input :proc_code, collection: @procedures, label_method: :code, value_method: :code, prompt: 'Select', label: false, include_blank: 'None', hint: 'Required' %> 
   </div>
 
   <div class="col-sm-2"> 
@@ -93,13 +98,6 @@
 
   <!-- Row 3 -->
 
-  <%= f.hidden_field :bil_type, value: HCP_BILLING %>
-  <%= f.hidden_field :bil_type2  %>
-  <%= f.hidden_field :bil_type3  %>
-  <%= f.hidden_field :bil_type4  %>
-
-  <!-- Row 4 -->
-
 <div class="row">
   <div class="col-sm-2" id="visit_statuses">
   <%= f.input :status, collection: VISIT_STATUSES, include_blank: false,  placeholder: 'Status', disabled: disabled  %>
@@ -126,7 +124,7 @@
   </div>
 </div>
 
-  <!-- Row 5: Reason for visit  -->
+  <!-- Row 4: Reason for visit  -->
 
 <div class="row">
   <div class="col-sm-12">
@@ -134,7 +132,7 @@
   </div>
 </div>
 
-<!-- Row 7: Notes, submit button -->
+<!-- Row 5: Notes, submit button -->
 <div class="row">
   <div class="col-sm-12"> 
      <%= f.input :notes, placeholder: 'Doctor Notes', label: false, input_html: {rows:4} %>
