--- a/app/views/visits/_admin_form.html.erb
+++ b/app/views/visits/_admin_form.html.erb
@@ -25,6 +25,11 @@
   end 
 %>
 
+  <%= f.hidden_field :bil_type   %>
+  <%= f.hidden_field :bil_type2  %>
+  <%= f.hidden_field :bil_type3  %>
+  <%= f.hidden_field :bil_type4  %>
+
 <div class="cyan-well">
   <!-- Row 0 if new visit or admin --> 
 
@@ -92,13 +97,6 @@
 </div>
 
   <!-- Row 3 -->
-
-  <%= f.hidden_field :bil_type, value: HCP_BILLING %>
-  <%= f.hidden_field :bil_type2  %>
-  <%= f.hidden_field :bil_type3  %>
-  <%= f.hidden_field :bil_type4  %>
-
-  <!-- Row 4 -->
 
 <div class="row">
   <div class="col-sm-2" id="visit_statuses">
