voice alerts disabled; schedule change; business hours now in local zone

--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -3,7 +3,13 @@
 <div class="row">  
   <div class="col-md-5">
     <img src='/images/clinic.jpg' width="480" style="padding: 20px"></img>
-    <div id="address">140 Centennial Pkwy N, Hamilton, ON L8E 1H9 (289) 204-0561 </div>
+    <div id="address">140 Centennial Pkwy N, Hamilton, ON L8E 1H9 (289) 204-0561 
+      <br>During clinic open hours: (905) 561-9255 </div>
+
+    <div class="p-4">
+      Clinic is now open Fri-Tue from 12pm to 6pm, Wednesday 9am to 3pm and Thursday 10am to 3pm<p>
+      And, as usual, we also take virtual appointments.
+    </div>
   </div>
 
 <div class="col-md-7">
