--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -18,6 +18,12 @@
 <p class="pt-3">Don’t have a health card? We still can help. Please call the number below and leave a message. We will respond as soon as we can. </p>
 
 <h1> (289) 204-0561 </h1>
+<h1> During open hours: (905) 561-9255 </h1>
+
+    <div class="p-3">
+      Clinic is now open Fri-Tue from 12pm to 6pm, Wednesday 9am to 3pm and Thursday 10am to 3pm<p>
+      And, as usual, we also take virtual appointments.
+    </div>
 
 <div class='pt-5'>
 <%= render "footer_icons" %>
