front page panel tweaked

--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -6,10 +6,17 @@
     <div id="address">140 Centennial Pkwy N, Hamilton, ON L8E 1H9 (289) 204-0561 
       <br>During clinic open hours: (905) 561-9255 </div>
 
-    <div class="p-4">
-      Clinic is now open Fri-Tue from 12pm to 6pm, Wednesday 9am to 3pm and Thursday 10am to 3pm<p>
+    <p>
+    <div class="ml-3">
+    <div class="panel panel-info p-3 news-panel-body">
+     <div class="panel-body ">
+    <font size=3>
+      Clinic is now open by appointment only Fri-Tue from 12pm to 6pm, Wednesday 9am to 3pm and Thursday 10am to 3pm<p>
       And, as usual, we also take virtual appointments.
+    </font>
     </div>
+  </div>
+  </div>
   </div>
 
 <div class="col-md-7">
