more front page tweaks

--- a/app/views/static_pages/_desktop_lookup.html.erb
+++ b/app/views/static_pages/_desktop_lookup.html.erb
@@ -2,6 +2,7 @@
 <%= simple_form_for :user, url: users_lookup_path do |f| %>
   <%= f.error_notification %>
 
+  <div class='ml-2'>Patient Registration</div>
 <small>
 <div class="panel panel-default ml-2">
 <div class="panel-body">
