--- a/app/views/static_pages/_mobile_lookup.html.erb
+++ b/app/views/static_pages/_mobile_lookup.html.erb
@@ -2,6 +2,7 @@
 <%= simple_form_for :user, url: users_lookup_path do |f| %>
   <%= f.error_notification %>
 
+<div class='ml-2'><b>Patient Registration</b></div>
 <div class="panel panel-default ml-2">
 <div class="panel-body">
 <div class="row">
