--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -12,7 +12,7 @@
      <div class="panel-body ">
     <font size=3>
       Clinic is now open by appointment only Fri-Tue from 12pm to 6pm, Wednesday 9am to 3pm and Thursday 10am to 3pm<p>
-      And, as usual, we also take virtual appointments.
+      Please call (905) 561-9255 during business hours to make an appointment. Rest of the time, please call (289) 204-0561
     </font>
     </div>
   </div>
