doctor column readded for clinic visits

--- a/app/views/billings/index.html.erb
+++ b/app/views/billings/index.html.erb
@@ -36,7 +36,7 @@
           <th class="tbl_lsm text-center">Cash</th>
           <th class="tbl_xmd text-center">Ttl. Fee</th>
           <th class="tbl_md text-center">Status</th>
-	  <th class="tbl_md text-center">Acc Ref#</th>
+	  <th class="tbl_md text-center">Ref#</th>
       </tr>
   </thead>
   <tbody>
