--- a/app/views/daysheet/_admin_index.html.erb
+++ b/app/views/daysheet/_admin_index.html.erb
@@ -10,36 +10,36 @@
 %>
 
 <div id='page'>
-<table class="tbl2 table-hover table-striped table-bordered" >
+<table class="tbl2 table-hover table-bordered" >
   <thead>
       <tr>
 	  <th class="tbl_xs"></th>
 	  <th class="tbl_lsm"><%= sortable 'entry_ts', ts.html_safe %></th>
-	  <% if date.today? %>
-	  <th class="tbl_sm">Room</th>
- 	  <% end %>
-	  <th class="tbl_lsm">
-	  <% if @docs.present? && @docs.size > 1 %>
+          
+          <% if device_is_desktop? && !current_user.doctor? %>
+          <th class="tbl_lsm">
+          <% if @docs.present? && @docs.size > 1 %>
           <span class="dropdown" >
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><font color="white"> Doctor <b class="caret"></b></font> </a>
             <ul class="dropdown-menu">
               <li><%= link_to "All", params.permit(:date).merge(date: params[:date]) %></li>
               <% @docs.each do | doc | %>
-		<li><%= link_to doc.lname, params.permit(:doc_id,:date).merge(doc_id: doc.id, date: params[:date]) %> </li>
+                <li><%= link_to doc.lname, params.permit(:doc_id,:date).merge(doc_id: doc.id, date: params[:date]) %> </li>
               <% end %>
             </ul>
           </span>
-	  <% else %>
-		Doctor  
-	  <% end %>	
+          <% else %>
+                Doctor 
+          <% end %>
           </th>
+         <% end %>
 
 	  <th class="tbl_lmd">Patient</th>
-          <th class="tbl_sm">Type</th>
-	  <% if device_is_desktop? %>
-          <th class="tbl_md">HC/IFH #</th>
-	  <% end %>
-          <th class="tbl_lsm">Diag.</th>
+          <th class="tbl_sm text-center">Type</th>
+          <th class="tbl_md text-center">HC/IFH #</th>
+          <th class="tbl_md text-center">Home</th>
+          <th class="tbl_lsm text-center">email</th>
+          <th class="tbl_lsm text-center">Diag.</th>
           <th class="tbl_md">Services</th>
 	  <% if device_is_desktop? %>
           <th class="tbl_sm">Status</th>
@@ -50,8 +50,8 @@
 	  <% if !device_is_desktop? %>
             <th class="tbl_sm"></th>
           <% end %>
-	  <% if current_user.admin? %>
-	    <th class="tbl_sm"></th>  <!-- Delete -->
+	  <% unless current_user.patient? %>
+	    <th class="tbl_sm"></th>  <!-- Delete/cancel -->
   	  <% end %>
 
       </tr>
