--- a/app/views/daysheet/_admin_visit.html.erb
+++ b/app/views/daysheet/_admin_visit.html.erb
@@ -28,6 +28,9 @@
            <td><%= link_to visit.entry_ts.strftime("%d-%b"), patient_visit_path(pat,visit) %></td>
         <% end %>
 
+        <% if device_is_desktop? %>
+	<td><%= visit.doctor.lname %></td>
+        <% end %>
 	<td><%= link_to pat.full_name, pat %></td>
 	<td class='text-center'><%= pat.pat_type %></td>
 	<td>
@@ -37,8 +40,7 @@
 	   <%= pat.ohip_num_full %>
         <% end %>
 	</td>
-        <td><%= pat.phone %></td>
-        <td><%= pat.mobile %></td>
+        <td class="text-center"><%= pat.mobile_or_home_phone %></td>
         <td class='text-center'>
           <% if pat.email.present? %>
           <%= link_to 'email', "mailto:#{pat.email}" %>
