--- a/app/views/daysheet/_staff_visit.html.erb
+++ b/app/views/daysheet/_staff_visit.html.erb
@@ -3,7 +3,7 @@
    remote = device_is_desktop?
 %>
 
-<!--tr style='background-color: #dff0d8;' -->
+  <!--tr style='background-color: #dff0d8;' -->
   <tr class="<%= highlight %>">
 	<td>
 	<% if visit.ready_to_bill? %>
@@ -28,6 +28,9 @@
            <td><%= link_to visit.entry_ts.strftime("%d-%b"), patient_visit_path(pat,visit) %></td>
         <% end %>
 
+        <% if device_is_desktop? %>
+	<td><%= visit.doctor.lname %></td>
+        <% end %>
 	<td><%= link_to pat.full_name, pat %></td>
 	<td class='text-center'><%= pat.pat_type %></td>
 	<td>
@@ -37,8 +40,7 @@
 	   <%= pat.ohip_num_full %>
         <% end %>
 	</td>
-        <td><%= pat.phone %></td>
-        <td><%= pat.mobile %></td>
+        <td class="text-center"><%= pat.mobile_or_home_phone %></td>
         <td class='text-center'>
           <% if pat.email.present? %>
           <%= link_to 'email', "mailto:#{pat.email}" %>
@@ -61,16 +63,13 @@
 	 <td class='text-center'><%= link_to '<i class="glyphicon glyphicon-file"></i>'.html_safe, visitform_patient_visit_path(pat,visit), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', method: 'get', onclick: "set_lg_modal()"  %></td>
 
 	<!-- #modal-window is defined in index -->	
-  	<% if visit.editable? %>
-	  <% if remote %>
-            <td class='text-center'><%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_visit_path(pat,visit), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window', method: :get, onclick: "set_lg_modal()"  %></td>
-          <% else %>
-	    <td class='text-center'><%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_visit_path(pat,visit) %></td>
-	    <td class='text-center'><%= link_to '<i class="glyphicon glyphicon-record"></i>'.html_safe, addvoicenote_patient_visit_path(pat,visit) %> </td>
-          <% end %>
-	<% end %>
+        <% if remote %>
+          <td class='text-center'><%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_visit_path(pat,visit), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window', method: :get, onclick: "set_lg_modal()"  %></td>
+        <% else %>
+          <td class='text-center'><%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_visit_path(pat,visit) %></td>
+          <td class='text-center'><%= link_to '<i class="glyphicon glyphicon-record"></i>'.html_safe, addvoicenote_patient_visit_path(pat,visit) %> </td>
+        <% end %>
 
-          <td class='text-center'>
-          <%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, cancel_patient_visit_path(pat, visit) %>
-          </td>
+	 <td class='text-center'><%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, patient_visit_path(pat,visit), method: :delete, data: { confirm: "Are you sure you want to delete visit #{visit.id} for patient #{pat.lname}?" } %> </td>
 </tr>
+<%# end %>
