--- a/app/views/daysheet/_staff_index.html.erb
+++ b/app/views/daysheet/_staff_index.html.erb
@@ -37,7 +37,7 @@
 	  <th class="tbl_lmd">Patient</th>
           <th class="tbl_sm">Type</th>
           <th class="tbl_md text-center">HC/IFH #</th>
-          <th class="tbl_md text-center">Home</th>
+          <th class="tbl_md text-center">Phone</th>
           <th class="tbl_lsm text-center">email</th>
           <th class="tbl_lsm text-center">Diag.</th>
           <th class="tbl_md">Services</th>
