--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -2,18 +2,17 @@
 
 <div class="row">  
   <div class="col-md-5">
-    <img src='/images/clinic.jpg' width="480" style="padding: 20px"></img>
+    <img src='/images/clinic.jpg' width="480"></img>
     <div id="address">140 Centennial Pkwy N, Hamilton, ON L8E 1H9 (289) 204-0561 
-      <br>During clinic open hours: (905) 561-9255 </div>
+      <br>During clinic open hours: (905) 561-9255 
+    </div>
 
     <p>
     <div class="ml-3">
     <div class="panel panel-info p-3 news-panel-body">
-     <div class="panel-body ">
-    <font size=3>
-      Clinic is now open by appointment only Fri-Tue from 12pm to 6pm, Wednesday 9am to 3pm and Thursday 10am to 3pm<p>
-      Please call (905) 561-9255 during business hours to make an appointment. Rest of the time, please call (289) 204-0561
-    </font>
+     <div class="panel-body">
+      Clinic is now open by appointment only Mon-Sat from 9am to 2pm. You can book your appointment online.
+  <%= render "schedules/full_schedule" %>
     </div>
   </div>
   </div>
