--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -20,16 +20,13 @@
 <h1> (289) 204-0561 </h1>
 
   <p>
-    <div class="panel panel-info p-3 news-panel-body">
+    <div class="panel panel-info p-1 news-panel-body">
      <div class="panel-body ">
-    <font size=3>
-      Clinic is now open by appointment only Fri-Tue from 12pm to 6pm, Wednesday 9am to 3pm and Thursday 10am to 3pm<p>
-      Please call (905) 561-9255 during open hours to make an appointment. Rest of the time, please call the number above.
-    </font>
+       Clinic is now open by appointment only Mon-Sat from 9am to 2pm. You can book your appointment online.
+  <%= render "schedules/full_schedule" %>
     </div>
   </div>
-  </div>
 
-<div class='pt-5'>
+<div class='pt-3'>
 <%= render "footer_icons" %>
 </div>
