--- a/app/views/schedules/_full_schedule.html.erb
+++ b/app/views/schedules/_full_schedule.html.erb
@@ -1,6 +1,6 @@
 <% @schedules = Schedule.all %>
-<table class="tbl table-hover table-striped table-bordered" >
-	<caption><h4>Current Doctor's Schedules</h4></caption>
+<table class="table table-hover table-condensed" >
+<caption><h4>Current Schedule</h4></caption>
   <tbody>
     <% @schedules.each do |schedule| %>
       <tr>
