New schedule; mobile daysheet pages

--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -8,7 +8,7 @@
     </div>
 
     <p>
-    <div class="ml-3">
+    <div class="ml-3 pt-3">
     <div class="panel panel-info p-3 news-panel-body">
      <div class="panel-body">
       Clinic is now open by appointment only Mon-Sat from 9am to 2pm. You can book your appointment online.
