--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -20,7 +20,7 @@
 <h1> (289) 204-0561 </h1>
 
   <p>
-    <div class="panel panel-info p-1 news-panel-body">
+    <div class="panel panel-info pt-3 news-panel-body">
      <div class="panel-body ">
        Clinic is now open by appointment only Mon-Sat from 9am to 2pm. You can book your appointment online.
   <%= render "schedules/full_schedule" %>
