book appointment link

--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -22,7 +22,7 @@
   <p>
     <div class="panel panel-info pt-3 news-panel-body">
      <div class="panel-body ">
-       Clinic is now open by appointment only Mon-Sat from 9am to 2pm. You can book your appointment online.
+       Clinic is now open by appointment only Mon-Sat from 9am to 2pm. You can <%= link_to "book your appointment online", new_user_session_path %>
   <%= render "schedules/full_schedule" %>
     </div>
   </div>
