--- a/app/views/visits/_doctor_form.html.erb
+++ b/app/views/visits/_doctor_form.html.erb
@@ -141,9 +141,16 @@
 
 <div class="row">
   <div class="col-sm-12"> 
-    <%= f.input :document, label: 'Upload Attachment (pdf/jpg)'  %>
+    <%= f.label 'Add Documents (pdf/jpg/png/txt)' %>
+    <%= f.file_field :document, multiple: true, hint: 'Optional'  %>
   </div>
 </div>
+<p>
+<b> Attached documents: </b>
+<% @visit.documents.each do |d| %>
+   <% next unless d.document.file.present? %>
+   &nbsp;|&nbsp;<%= link_to d.document.file.filename, d.document.url.to_s %>
+ <% end %>
 
 <div class="spacer-10"></div>
 
