--- a/app/views/visits/_admin_form.html.erb
+++ b/app/views/visits/_admin_form.html.erb
@@ -142,7 +142,8 @@
 
 <div class="row">
   <div class="col-sm-12"> 
-    <%= f.input :document, label: 'Attach document/picture (pdf/jpg)'  %>
+    <%= f.label 'Add Documents (pdf/jpg/png/txt)' %>
+    <%= f.file_field :document, multiple: true, hint: 'Optional'  %>
   </div>
 </div>
 <b> Attached documents: </b>
