--- a/app/views/visits/_patient_desktop_visit.html.erb
+++ b/app/views/visits/_patient_desktop_visit.html.erb
@@ -2,7 +2,14 @@
   <td><%= link_to visit.date, patient_visit_path(@patient,visit) %></td>
   <td><%= visit.doctor.lname %>
   <td><%= visit.diag_descr %></td>
-  <td>
+  <td class="text-center">
+  <% if visit.date.today? && !visit.cancelled? %>
+    <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_visit_path(@patient,visit), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window', onclick: "set_lg_modal()"  %>
+  <% end %>
+  </td>
+
+  <%# , remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window', onclick: "set_lg_modal()"  %> 
+  <td class="text-center">
     <% if visit.status == CANCELLED %>
     Cancelled
   <% elsif visit.date.today? && visit.status == ARRIVED %>
