--- a/app/views/visits/_patient_form.html.erb
+++ b/app/views/visits/_patient_form.html.erb
@@ -44,17 +44,32 @@
   </div>
 </div>
 
+<% if @visit.documents.present? %>
+<b>Attached Documents</b>: |
+<% @visit.documents.each do |d| %>
+   <% next unless d.document.file.present? %>
+   <%= link_to d.document.file.filename, d.document.url.to_s %> &nbsp;|&nbsp;
+<% end %>
+<% end %>
+<p>
+
 <div class="row">
   <div class="col-sm-12">
-    <%= f.input :document, label: 'Upload Document/Picture (pdf/jpg)', hint: 'Optional'  %>
+    <%= f.label 'Add Documents (pdf/jpg/png/txt)' %>
+    <%= f.file_field :document, multiple: true, hint: 'Optional'  %>
   </div>
 </div>
 
+<% if action_name == 'new' %>
+<p>
 <%= render "consent_form", f: f %>
+<% end %>
 
+<div class="pt-3">
 <% unless action_name == 'show' %>
     <%= f.button :submit, yield(:button_text), class: "btn btn-primary btn-block btn-lg" %>
 <% end %>
+</div>
 
 <small><i>Please make sure the phone number shown in the title is correct. Otherwise doctor won't be able to reach you</i></small>
 </div>
