--- a/app/views/visits/_patient_show.html.erb
+++ b/app/views/visits/_patient_show.html.erb
@@ -31,10 +31,10 @@
 <% end %>
 
 <% if @visit.documents.present? %>
-<b>Attached Documents</b>:
+<b>Attached Documents</b>: |
 <% @visit.documents.each do |d| %>
    <% next unless d.document.file.present? %>
-   <%= link_to d.document.file.filename, d.document.url.to_s %>
+   <%= link_to d.document.file.filename, d.document.url.to_s %> &nbsp; | &nbsp;
 <% end %>
 <% end %>
 
