--- a/app/views/visits/_patient_desktop_visit.html.erb
+++ b/app/views/visits/_patient_desktop_visit.html.erb
@@ -3,7 +3,7 @@
   <td><%= visit.doctor.lname %>
   <td><%= visit.diag_descr %></td>
   <td class="text-center">
-  <% if visit.date.today? && !visit.cancelled? %>
+  <% if visit.arrived? %>
     <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_visit_path(@patient,visit), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window', onclick: "set_lg_modal()"  %>
   <% end %>
   </td>
@@ -12,7 +12,7 @@
   <td class="text-center">
     <% if visit.status == CANCELLED %>
     Cancelled
-  <% elsif visit.date.today? && visit.status == ARRIVED %>
+  <% elsif visit.date.today? && visit.arrived? %>
     <%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, cancel_patient_visit_path(@patient, visit), data: { confirm: "Are you sure you want to cancel your appointment?" } %>
   <% end %>
   </td>
